--- a/Home Page Website/index.html
+++ b/Home Page Website/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+
+  <header>Jackie Pust Projects : GRA 424</header>
   
-  <title>Jackie Pust Projects : GRA 424</title>
+  <title></title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
