--- a/Home Page Website/index.html
+++ b/Home Page Website/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <header>Jackie Pust Projects : GRA 424</header>
+  <div class="header">
+    <h1>Jackie Pust Projects</h1>
+    <p>Gra 424</p>
+  </div>
   
   <title></title>
 
