--- a/Home Page Website/index.html
+++ b/Home Page Website/index.html
@@ -4,10 +4,23 @@
 <head>
   <meta charset="utf-8">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
+
+
   <div class="header">
     <h1>Jackie Pust Projects</h1>
-    <p>Gra 424</p>
+    <p>Graphic Design 424</p>
   </div>
+
+  <div> 
+    <ol>
+      <li>Project 1</li>
+      <li>Project 2</li>
+      <li>Project 3</li>
+      <li>Project 4</li>
+    </ol>
   
   <title></title>
 
