--- a/Home Page Website/index.html
+++ b/Home Page Website/index.html
@@ -4,13 +4,9 @@
 <head>
   <meta charset="utf-8">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
-
 
   <div class="header">
-    <h1>Jackie Pust Projects</h1>
+    <h1>JACKIE PUST</h1>
     <p>Graphic Design 424</p>
   </div>
 
@@ -37,6 +33,10 @@
 
   <!-- Load Scripts -->
   <script src="js/scripts.js"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet">
 
 </body>
 
