--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <div> 
     <ol>
-      <li>Project 1</li>
+      <li><a href="Project-1">Project 1</a></li>
+      <li><a href="Project-1.5/">Project 1.5</a></li>
       <li>Project 2</li>
       <li>Project 3</li>
       <li>Project 4</li>
