--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
   <div> 
     <ol>
-      <li><a href="Project-1">Project 1</a></li>
-      <li><a href="Project-1.5/">Project 1.5</a></li>
+      <li><a href="Project-1">Black on White</a></li>
+      <li><a href="Project-1.5/">White on Black</a></li>
       <li>Project 2</li>
       <li>Project 3</li>
       <li>Project 4</li>
