--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ol>
       <li><a href="Project-1">Black on White</a></li>
       <li><a href="Project-1.5/">White on Black</a></li>
-      <li>Project 2</li>
+      <li><a href="project-2/">Line Interaction</a></li>
       <li>Project 3</li>
       <li>Project 4</li>
     </ol>
