--- a/project-2/index.html
+++ b/project-2/index.html
@@ -22,7 +22,27 @@
     <div class="child"></div>
     <div class="child2"></div>
     <div class="child3"></div>
+    <div class="child4"></div>
     <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
+    <div class="child3"></div>
+    <div class="child4"></div>
     <div class="child3"></div>
   </div>
 
