--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="Project-1">Black on White</a></li>
       <li><a href="Project-1.5/">White on Black</a></li>
       <li><a href="project-2/">Line Interaction</a></li>
+      <li><a href="line-2/">Line Interaction Step 2</a></li>
       <li>Project 3</li>
       <li>Project 4</li>
     </ol>
