--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="Project-1.5/">White on Black</a></li>
       <li><a href="project-2/">Line Interaction</a></li>
       <li><a href="line-2/">Line Interaction Step 2</a></li>
+      <li><a href="line-3/">Line Interaction Step 3</a></li>
       <li>Project 3</li>
       <li>Project 4</li>
     </ol>
