--- a/line-3/index.html
+++ b/line-3/index.html
@@ -45,6 +45,7 @@
     <div class="child4"></div>
     <div class="child3"></div>
     <div class="child5"></div>
+    <div class="child6"></div>
   </div>
 
 
