--- a/line-2/index.html
+++ b/line-2/index.html
@@ -44,7 +44,17 @@
     <div class="child3"></div>
     <div class="child4"></div>
     <div class="child3"></div>
-    <div class="child5"></div>
+
+    <div class="parent1-5">
+      <div class="child5"></div>
+      <div class="white1"></div>
+      <div class="child5"></div>
+      <div class="white1"></div>
+      <div class="child5"></div>
+      <div class="white1"></div>
+      <div class="child5"></div>
+    </div>
+
   </div>
 
 
