--- a/line-3/index.html
+++ b/line-3/index.html
@@ -20,33 +20,69 @@
 
   <div class="parent">
     <div class="child"></div>
-    <div class="child2"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child4"></div>
-    <div class="child3"></div>
-    <div class="child5"></div>
-    <div class="child6"></div>
+      <div class="child2"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+      <div class="child4"></div>
+      <div class="child3"></div>
+    
+      <div class="parent1-5">
+        <div class="child5"></div>
+        <div class="white1"></div>
+        <div class="child5"></div>
+        <div class="white1"></div>
+        <div class="child5"></div>
+        <div class="white1"></div>
+        <div class="child5"></div>
+      </div>
+
+    <div class="parent2">
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+      <div class="child7"></div> 
+      <div class="child6"></div> 
+    </div>
+
   </div>
+
 
 
   <!-- Load Scripts -->
