--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="project-2/">Line Interaction</a></li>
       <li><a href="line-2/">Line Interaction Step 2</a></li>
       <li><a href="line-3/">Line Interaction Step 3</a></li>
+      <li><a href="line-4/">Line Interaction Step 4</a></li>
       <li>Project 3</li>
       <li>Project 4</li>
     </ol>
