--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <li><a href="line-2/">Line Interaction Step 2</a></li>
       <li><a href="line-3/">Line Interaction Step 3</a></li>
       <li><a href="line-4/">Line Interaction Step 4</a></li>
-      <li>Project 3</li>
-      <li>Project 4</li>
+      <li><a href="color-match/">Color Matching</a></li>
     </ol>
   
   <title></title>
