--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <li><a href="line-3/">Line Interaction Step 3</a></li>
       <li><a href="line-4/">Line Interaction Step 4</a></li>
       <li><a href="color-match/">Color Matching</a></li>
+      <li><a href="value-match/">Value Matching</a></li>
+      <li><a href="transparency1/">Transparency Step 1</a></li>
+      <li><a href="transparency2/">Transparency Step 2</a></li>
+      <li><a href="transparency3/">Transparency Step 3</a></li>
     </ol>
   
   <title></title>
