--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href="transparency1/">Transparency Step 1</a></li>
       <li><a href="transparency2/">Transparency Step 2</a></li>
       <li><a href="transparency3/">Transparency Step 3</a></li>
+      <li><a href="four-three/">Four Appears as Three</a></li>
     </ol>
   
   <title></title>
