Five Appears as Six

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="transparency2/">Transparency Step 2</a></li>
       <li><a href="transparency3/">Transparency Step 3</a></li>
       <li><a href="four-three/">Four Appears as Three</a></li>
+      <li><a href="five-six/">Five Appears as Six</a></li>
     </ol>
   
   <title></title>
